--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "major",
+  "name": "majorp1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "add": "^2.0.6",
-    "packages": "^0.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "react-switch": "^7.0.0",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.22"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
